--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,8 @@ server/venv
 node_modules
 server/.env
 task.todo
-./server/build
 server/linux-venv/
 server/venv/
 server/dist/
+build
+server/build
